Closed Bug 919968 Opened 11 years ago Closed 11 years ago

OdinMonkey doesn't build on NetBSD/amd64 and Solaris/i386

Categories

(Core :: JavaScript Engine, defect)

x86_64
NetBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: jbeich, Unassigned)

References

()

Details

Attachments

(2 files, 1 obsolete file)

PkgSrc has a fix.
Attached patch missedSplinter Review
NetBSD defines struct savefpu in <machine/fpu.h> on amd64 and <machine/npx.h> on i386. fpu.h, unlike npx.h, also exists on other architectures.
Solaris defines REG_RIP on amd64 and EIP on i386, they're both aliased to REG_PC. REG_ prefix seems to be reserved for amd64 ABI.

http://bxr.su/NetBSD/sys/arch/amd64/include/fpu.h
http://src.illumos.org/source/xref/illumos-gate/usr/src/uts/intel/sys/regset.h
Attachment #809105 - Flags: review?(luke)
Attached patch use PC_sig everywhere (obsolete) — Splinter Review
Trying to cut down on code duplication in arch-specific ifdefs a bit more.
Attachment #809108 - Flags: review?(luke)
Comment on attachment 809105 [details] [diff] [review]
missed

All the BSDs!
Attachment #809105 - Flags: review?(luke) → review+
Comment on attachment 809108 [details] [diff] [review]
use PC_sig everywhere

>-# if defined(JS_CPU_X64)
>-    JS_STATIC_ASSERT(sizeof(RIP_sig(context)) == sizeof(void*));
>-    return reinterpret_cast<uint8_t**>(&RIP_sig(context));
>-# elif defined(JS_CPU_X86)
>-    JS_STATIC_ASSERT(sizeof(EIP_sig(context)) == sizeof(void*));
>-    return reinterpret_cast<uint8_t**>(&EIP_sig(context));
>-# elif defined(JS_CPU_ARM)
>+# if defined(PC_sig)
>     JS_STATIC_ASSERT(sizeof(PC_sig(context)) == sizeof(void*));
>     return reinterpret_cast<uint8_t**>(&PC_sig(context));
> # endif
> }

Now that there is a single valid case, can you remove the "# if defined(PC_sig)"?
Attachment #809108 - Flags: review?(luke) → review+
PC_sig ifdef removed as ENABLE_ION is only defined on supported JS_CPU_* archs; carrying over r+
Attachment #809108 - Attachment is obsolete: true
Keywords: checkin-needed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: