Bug 919968 - Fix AsmJS build errors on Solaris/i386 and NetBSD/amd64. r=luke